# env-sync

cli/: pyproject.toml
server/: pyproject.toml
